tests/invalid/boolop_type_mismatch_three_values/main.py
def main() -> None:
    x: int = 1 and 2 and "3"
    print(x)
